hphp/test/slow/object_property/710.php.expectf

Fatal error: Cannot access property started with '\0' in %s/test/slow/object_property/710.php on line 4
